refactor: endpoint name, resolve conflit, database migration
