# src/main/java/com/genfood/foodgenback/endpoint/rest/controller/UserController.java
@@ -8,23 +8,22 @@ import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @AllArgsConstructor
 public class UserController {
-    private final UserService userService;
-    private final MailValidator mailValidator;
+  private final UserService userService;
+  private final MailValidator mailValidator;
 
-    @PutMapping("/user")
-    public User Save(@RequestBody User userEntity){
-        mailValidator.accept(userEntity);
-        return userService.saveUser(userEntity);
-    }
+  @PutMapping("/users")
+  public User Save(@RequestBody User userEntity) {
+    mailValidator.accept(userEntity);
+    return userService.saveUser(userEntity);
+  }
 
-    @GetMapping("/user/{username}")
-    public User getByUserName(@PathVariable String username){
-        return userService.getUserByName(username);
-    }
+  @GetMapping("/users/{username}")
+  public User getByUserName(@PathVariable String username) {
+    return userService.getUserByUsername(username);
+  }
 }
